feat: done with task 2.2.1

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -5,6 +5,11 @@ db.username=root
 db.password=root
 
 # Hibernate properties
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
+
+db.postgres.driver=org.postgresql.Driver
+db.postgres.url=jdbc:postgresql://localhost:5432/task_5_spring_hiber
+db.postgres.username=postgres
+db.postgres.password=
 
